creando conexion BD

--- a/Proyects/Clinica.Api/appsettings.json
+++ b/Proyects/Clinica.Api/appsettings.json
@@ -1,4 +1,9 @@
+
+
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ClinicaDb;User Id=root;Password=123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
